# aacf-py

./: .gitignore  README.md  README_zh.md  Wiki.md  Wiki_zh.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
aacf/: __init__.py  _messages.py  cli.py  compiler.py  core.py  visualize.py
aacf_mcp/: __init__.py  __main__.py  server.py
aacf_mcp/tools/: __init__.py  nodes.py  pipeline.py  project.py  prompts.py  resources.py
examples/: agents.py  main.py
tests/: conftest.py  test_cache.py  test_compiler.py  test_config.py  test_decorator.py  test_errors.py  test_pydantic_node.py  test_visualize.py
